--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.2",
     "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
+    "jquery": ">=3.4.0"
     "jquery-toast-plugin": "^1.3.2",
     "popper.js": "^1.14.4"
   }
